Support of data binding by guard